--- a/package.json
+++ b/package.json
@@ -24,25 +24,29 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-table": "^8.17.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
-    "firebase": "^10.8.0",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.338.0",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -53,6 +57,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "supabase": "^2.15.8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
