--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
+    "sharp": "^0.34.2",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
