--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.0.41",
+    "@react-email/tailwind": "^1.0.5",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
@@ -44,6 +46,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.1",
+    "resend": "^4.5.2",
     "sharp": "^0.34.2",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
