feat: update package version and enhance README</message>
<message>Updated the package version to 1.0.0 and improved the project description in package.json for clarity. Enhanced the README with detailed features, including real-time analytics and responsive design. Added new sections for automated notifications and recent updates, providing a comprehensive overview of the platform's capabilities. Additionally, introduced a custom SidebarLink component to improve mobile sidebar functionality, ensuring a better user experience. These changes align with the project's focus on clean, modular code and improved documentation.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "rimcode-services-dashboard",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
-  "description": "RIMcode's service management dashboard for managing and monitoring services, accounts, and user subscriptions",
+  "description": "Enterprise-grade service management dashboard with real-time analytics, responsive design, and comprehensive subscription management",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
