--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Enterprise-grade service management dashboard with real-time analytics, responsive design, and comprehensive subscription management",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,9 +23,6 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-email/components": "^0.0.41",
     "@react-email/tailwind": "^1.0.5",
@@ -37,33 +34,30 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.7",
     "lucide-react": "^0.338.0",
     "moment": "^2.30.1",
-    "next": "14.1.0",
-    "react": "^18",
+    "next": "15.3.3",
+    "react": "19.1.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.8.1",
     "resend": "^4.5.2",
     "sharp": "^0.34.2",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@stagewise/toolbar-next": "^0.1.2",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "15.3.3",
     "postcss": "^8",
     "supabase": "^2.15.8",
     "tailwindcss": "^3.3.0",
